--- a/components/Footer/components/ColumnLinks/ColumnLinks.module.scss
+++ b/components/Footer/components/ColumnLinks/ColumnLinks.module.scss
@@ -5,6 +5,10 @@
   @include flex-column;
   gap: 30px;
 
+  @include media_660 {
+    gap: 10px;
+  }
+
   .title {
     @include font_s20_w800;
     color: $colorWhite;
@@ -12,12 +16,20 @@
     @include media_1180 {
       @include font_s18_w700;
     }
+
+    @include media_660 {
+      font-size: 16px;
+    }
   }
 
   .list {
     @include flex-column;
     gap: 12px;
     list-style-type: none;
+
+    @include media_660 {
+      gap: 5px;
+    }
 
     .link {
       color: $colorLigthText;
@@ -27,6 +39,10 @@
 
       @include media_1180 {
         font-weight: 400;
+      }
+
+      @include media_660 {
+        font-size: 14px;
       }
     }
   }
