--- a/components/Footer/components/Contacts/Contacts.module.scss
+++ b/components/Footer/components/Contacts/Contacts.module.scss
@@ -5,12 +5,21 @@
   @include flex-column;
   gap: 30px;
 
+  @include media_660 {
+    grid-column: 1 / 3;
+    gap: 10px;
+  }
+
   .title {
     @include font_s20_w800;
     color: $colorWhite;
 
     @include media_1180 {
       @include font_s18_w700;
+    }
+
+    @include media_660 {
+      font-size: 16px;
     }
   }
 
@@ -32,6 +41,17 @@
           @include media_1180 {
             font-weight: 400;
           }
+
+          @include media_660 {
+            font-size: 14px;
+          }
+        }
+
+        .iconAddress {
+          @include media_660 {
+            width: 20px;
+            height: 20px;
+          }
         }
       }
     }
@@ -43,6 +63,13 @@
 
       .link {
         @include el_hover;
+
+        .iconNetwork {
+          @include media_660 {
+            width: 30px;
+            height: 30px;
+          }
+        }
       }
     }
   }
