--- a/templates/HomeTemplate/components/MainBanner/MainBanner.module.scss
+++ b/templates/HomeTemplate/components/MainBanner/MainBanner.module.scss
@@ -18,4 +18,9 @@
     padding: 10px;
     @include font_s14_w500;
   }
+
+  @include media_660 {
+    padding: 10px 20px;
+    border-radius: $buttonRadius_660;
+  }
 }
