--- a/templates/BlogTemplate/BlogTemplate.module.scss
+++ b/templates/BlogTemplate/BlogTemplate.module.scss
@@ -2,17 +2,32 @@
 @import "@styles/variables";
 
 .h1 {
-  padding: 50px 0 100px;
+  padding: 50px 0;
   text-align: center;
+
+  @include media_660 {
+    padding: 30px 0;
+  }
 }
 
 .list {
   @include flex-column;
   gap: 50px;
   list-style-type: none;
+
+  @include media_660 {
+    gap: 30px;
+  }
 }
 
 .button {
   margin: 50px auto 100px;
   width: 250px;
+
+  @include media_980 {
+    padding: 15px 20px;
+    width: 200px;
+    font-weight: 400;
+    margin-bottom: $padding_820;
+  }
 }
