--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -117,6 +117,11 @@
   font-weight: 700;
 }
 
+@mixin font_s52_w700 {
+  font-size: 52px;
+  font-weight: 700;
+}
+
 @mixin font_s64_w800 {
   font-size: 64px;
   font-weight: 800;
