--- a/templates/ArticleTemplate/ArticleTemplate.module.scss
+++ b/templates/ArticleTemplate/ArticleTemplate.module.scss
@@ -2,27 +2,77 @@
 @import "@styles/variables";
 
 .title {
-  padding: 30px 0;
+  padding: 50px 0;
   display: flex;
   gap: 50px;
   align-items: center;
 
+  @include media_820 {
+    gap: 30px;
+  }
+
+  @include media_660 {
+    flex-direction: column;
+    padding: 50px 0 30px;
+  }
+
   .img {
     border-radius: 20px;
+
+    @include media_820 {
+      width: 300px;
+      height: 150px;
+    }
+
+    @include media_660 {
+      height: 200px;
+    }
+
+    @include media_440 {
+      width: 200px;
+      height: 100px;
+      border-radius: $buttonRadius_660;
+    }
   }
 
   .h1 {
-    @include font_s64_w800;
+    @include font_s52_w700;
     @include max-width-mixin(900px);
+
+    @include media_820 {
+      @include font_s36_w800;
+    }
+
+    @include media_660 {
+      text-align: center;
+    }
+
+    @include media_440 {
+      font-size: 28px;
+    }
   }
 }
 
 .text {
-  @include font_s20_w600;
+  @include font_s20_w400;
   color: $colorText;
   padding: 20px 0;
+  line-height: 1.3;
+
+  @include media_820 {
+    padding: 15px 0;
+    font-size: 18px;
+  }
+
+  @include media_440 {
+    font-size: 14px;
+  }
 
   &:last-child {
     padding-bottom: 100px;
+
+    @include media_820 {
+      padding-bottom: $padding_820;
+    }
   }
 }
