--- a/components/HeaderAuth/HeaderAuth.module.scss
+++ b/components/HeaderAuth/HeaderAuth.module.scss
@@ -1,6 +1,28 @@
+@import "@styles/_mixins";
+@import "@styles/_variables";
+
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 30px;
+  @include width_1360;
+  margin: 0 auto;
+
+  @include media_1440 {
+    padding: 30px 0;
+    max-width: $media_1440;
+  }
+
+  @include media_1180 {
+    max-width: $media_1180;
+  }
+
+  @include media_980 {
+    max-width: $media_980;
+  }
+
+  @include media_820 {
+    padding: 30px 20px;
+  }
 }
