--- a/layout/LayoutAuth/LayoutAuth.module.scss
+++ b/layout/LayoutAuth/LayoutAuth.module.scss
@@ -1,4 +1,5 @@
 @import "@styles/_mixins";
+@import "@styles/_variables";
 
 .wrap {
   @include flex-column;
@@ -10,5 +11,22 @@
     @include grow-shrink;
     @include grid-1fr;
     gap: 50px;
+
+    @include media_1440 {
+      max-width: $media_1440;
+    }
+
+    @include media_1180 {
+      max-width: $media_1180;
+    }
+
+    @include media_980 {
+      max-width: $media_980;
+    }
+
+    @include media_820 {
+      padding: 0 20px;
+      gap: 30px;
+    }
   }
 }
