--- a/components/PopupForm/PopupForm.module.scss
+++ b/components/PopupForm/PopupForm.module.scss
@@ -86,6 +86,18 @@
     .form {
       @include flex-column;
       gap: 15px;
+
+      .buttonCta {
+        @include media_660 {
+          padding: 15px;
+          font-weight: 400;
+          border-radius: $buttonRadius_660;
+        }
+
+        @include media_440 {
+          padding: 10px;
+        }
+      }
     }
 
     .message {
